# mangle-apis

./: .gitignore  Cargo.toml  Config.toml  README.md  mangle-apis.code-workspace  rustfmt.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  bashrc_append  devcontainer.json  mangle-apis.code-workspace
.github/workflows/: rust.yml
bola-api/: Cargo.toml  Cross.toml
bola-api/src/: config.rs  control.rs  db.rs  leaderboard.rs  main.rs  multiplayer.rs  network.rs  state.rs  tournament.rs  user_auth.rs  users.rs  ws_api.rs
deployment_notes/: README.md  compose.yml  installation.sh  nginx.conf
deployment_notes/bola/: Dockerfile  compose.yml
docker_build_env/: Dockerfile  README.md  bashrc_append  build.sh  compose.yaml
docker_stuff/: openssl.dockerfile
mangle-api-core/: Cargo.toml
mangle-api-core/src/: distributed.rs  lib.rs  sync.rs  tls.rs  utils.rs  webrtc.rs  ws.rs
mangle-api-core/src/auth/: auth_pages.rs  bearer.rs  mod.rs  oauth2.rs  openid.rs  session.rs  token.rs
mangle-api-core/src/db/: mod.rs  redis.rs
mangle-api-core/src/db/mangledb/: conn.rs  error.rs  mod.rs  structs.rs
mangle-api-core/src/neo_api/: mod.rs
mangle-api-core/src/static/: internal_error.html  invalid_auth.html  late_auth.html  successful_auth.html
mangledb/: Cargo.toml
mangledb/src/: conn.rs  db.rs  lib.rs  serde.rs  sync.rs  unique_owned.rs
manglext/: Cargo.toml
manglext/src/: lib.rs
messagist/: Cargo.toml
messagist/src/: bin.rs  lib.rs  pipes.rs  text.rs
