[workspace]
members = [
    "mangle-api-core",
    "bola-api",
]

[workspace.dependencies]
tokio = { version = "1.23.0", features = ["rt", "signal", "macros", "net", "rt-multi-thread"] }
anyhow = "1.0.68"

axum = { version = "0.6.1", features = ["http2", "ws", "headers", "macros"] }

serde = { version = "1.0.151", features = ["derive"] }
derive_more = "0.99.16"

[profile.release]
lto = true
