[workspace]
members = [
    "mangle-api-core",
    "bola-api",
    "messagist",
    "manglext"
]

[workspace.dependencies]
tokio = { version = "1.23.0", features = ["rt", "signal", "macros", "net", "rt-multi-thread"] }
anyhow = "1.0.68"

axum = { version = "0.6.15", features = ["http2", "ws", "headers", "macros"] }

log = "0.4"

serde = { version = "1.0.151", features = ["derive"] }
derive_more = "0.99.16"
thiserror = "1.0.40"
negative-impl = "0.1.3"

# [profile.release]
# lto = true
