[package]
name = "bola-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mangle-api-core = { path = "../mangle-api-core", features = [] }
aws-sdk-dynamodb = "0.24.0"
aws-config = "0.54.1"
aws-sdk-cognitoidentityprovider = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }