[package]
name = "bola-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mangle-api-core = { path = "../mangle-api-core", features = ["openid"] }
aws-sdk-dynamodb = "0.24.0"
aws-config = "0.54.1"
aws-types = "0.54.1"
thiserror = "1.0.38"
# rand = { version = "0.8.5", features = ["std_rng"] }
aws-sdk-sesv2 = "0.24.0"
# itertools = "0.10.5"