[package]
name = "mangle-api-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["fs", "rt", "signal", "macros", "net", "rt-multi-thread"] }
anyhow = "1.0.68"

hyper = "0.14.23"
tower = { version = "0.4.13" }
tower-http = { version = "0.3.5", features = ["cors", "compression-gzip", "compression-br", "trace", "auth"] }
axum = { version = "0.6.1", features = ["http2", "ws", "headers", "macros"] }

serde = { version = "1.0.151", features = ["derive"] }
toml = "0.5.10"
serde_json = "1.0.91"

log = "0.4"
chrono = "0.4.23"
fern = { version = "0.6.1", features = ["colored"]}

clap = "4.0.32"
mangle-detached-console = { git = "https://github.com/manglemix/mangle_detached_console.git" }

regex = "1.7.0"

constant_time_eq = "0.2.4"
rand = { version = "0.8.5", features = ["std_rng"] }

parking_lot = "0.12.1"

redis = { version = "0.22.1", features = ["cluster", "ahash", "connection-manager", "tokio-comp"], optional = true }
# delegate = { version = "0.9.0", optional = true }
