[package]
name = "messagist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { version = "1.0.91", optional = true }
bincode = { version = "1.3.3", optional = true }
async-trait = "0.1.68"
derive_more = { workspace = true }
tokio = { workspace = true }
# axum = { workspace = true }
futures-io = { version = "0.3.28", optional = true }
interprocess = { version = "1.2.1", features = ["tokio_support"], optional = true }
# async-bincode = { version = "0.7.0", optional = true }
# futures = { version = "0.3.28", optional = true }
log = { workspace = true }
thiserror = { workspace = true }
# manglext = { path = "../manglext" }
# negative-impl = { workspace = true }
tokio-util = { version = "0.7.7", features = ["compat"] }

[features]
json = ["serde_json"]
# bin = ["bincode", "futures"]
bin = ["bincode"]
pipes = ["bin", "futures-io", "interprocess"]
